test/error/self_ref_test.result
Error: self reference detected: str::wrap -> wrap::string -> str
  --> test/error/self_ref_test.colgm:4:1
  | 
4 | struct str {
  | ^^^^^^^^^^^^
5 |     c_str: i8*,
  | ^^^^^^^^^^^^^^^
6 |     wrap: wrap
  | ^^^^^^^^^^^^^^
7 | }
  | ^

Error: self reference detected: str::wrap -> wrap::un -> test_union::bb -> str
  --> test/error/self_ref_test.colgm:4:1
  | 
4 | struct str {
  | ^^^^^^^^^^^^
5 |     c_str: i8*,
  | ^^^^^^^^^^^^^^^
6 |     wrap: wrap
  | ^^^^^^^^^^^^^^
7 | }
  | ^

Error: self reference detected: wrap::string -> str::wrap -> wrap
  --> test/error/self_ref_test.colgm:11:1
   | 
11 | struct wrap {
   | ^^^^^^^^^^^^^
12 |     string: str,
   | ^^^^^^^^^^^^^^^^
13 |     un: test_union
   | ^^^^^^^^^^^^^^^^^^
14 | }
   | ^

Error: self reference detected: wrap::un -> test_union::cc -> wrap
  --> test/error/self_ref_test.colgm:11:1
   | 
11 | struct wrap {
   | ^^^^^^^^^^^^^
12 |     string: str,
   | ^^^^^^^^^^^^^^^^
13 |     un: test_union
   | ^^^^^^^^^^^^^^^^^^
14 | }
   | ^

Error: self reference detected: test_union::cc -> wrap::un -> test_union
  --> test/error/self_ref_test.colgm:17:1
   | 
17 | union(enum) test_union {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
18 |     aa: i32,
   | ^^^^^^^^^^^^
19 |     bb: str,
   | ^^^^^^^^^^^^
20 |     cc: wrap
   | ^^^^^^^^^^^^
21 | }
   | ^